# cosort-rs

./: Cargo.toml
src/: error.rs  lib.rs  table.rs  tests.rs
