[package]
name = "cosort"
version = "0.1.0"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/RGafiyatullin/cosort-rs.git"
description = "Sort several slices together"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std-error"]
std-error = ["dep:thiserror"]


[dependencies]
thiserror = {version = "^1", optional = true}

